# rsomics-vcf-merge

./: Cargo.toml
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs  smoke.rs
tests/golden/: a.vcf  b.vcf  ma1.vcf  ma2.vcf  s1.vcf  s2.vcf
